[package]
name = "io-enum"
version = "1.0.1"
edition = "2018"
rust-version = "1.31"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/io-enum"
keywords = ["io", "derive", "enum"]
categories = ["rust-patterns"]
exclude = ["/.*", "/tools"]
description = """
#[derive(Read, Write, Seek, BufRead)] for enums.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
members = ["tests/doc"]

[lib]
proc-macro = true

[dependencies]
derive_utils = "0.12"
quote = "1"
syn = "1"

[dev-dependencies]
macrotest = "1.0.9"
rustversion = "1"
