[package]
name = "io-enum"
version = "1.1.0"
edition = "2018"
rust-version = "1.56"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/io-enum"
keywords = ["io", "derive", "enum"]
categories = ["rust-patterns"]
exclude = ["/.*", "/tools", "/DEVELOPMENT.md"]
description = """
#[derive(Read, Write, Seek, BufRead)] for enums.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]

[lib]
proc-macro = true

[dependencies]
derive_utils = "0.13"
syn = "2"

[dev-dependencies]
macrotest = "1.0.9"
rustversion = "1"
