[package]
name = "io-enum"
version = "1.1.1"
edition = "2021"
rust-version = "1.56"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/io-enum"
keywords = ["io", "derive", "enum"]
categories = ["rust-patterns"]
exclude = ["/.*", "/tools", "/DEVELOPMENT.md"]
description = """
#[derive(Read, Write, Seek, BufRead)] for enums.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
resolver = "2"

[lib]
proc-macro = true

[dependencies]
derive_utils = "0.13.1"
syn = "2"

[dev-dependencies]
macrotest = { git = "https://github.com/taiki-e/macrotest.git", branch = "dev" } # 2021 edition support + syn 2.0 + no cargo-expand
rustversion = "1"
